# xoscs

./: .gazelle  .pre-commit-config.yml  BUILD  MODULE.bazel  README.md  WORKSPACE
backend/: go.mod  go.sum
backend/catalog/: README.md  go.mod
backend/catalog/cmd/catalog/: BUILD.bazel  config.go  main.go
backend/catalog/internal/db/: BUILD.bazel  db.go
backend/catalog/internal/server/: BUILD.bazel  server.go
backend/catalog/internal/service/server/: BUILD.bazel  server.go
backend/catalog/proto/: BUILD.bazel  scenario.proto
backend/cmd/api_server/: BUILD.bazel  main.go
backend/pkg/xosc/: BUILD.bazel  openscenario_schema.go  openscenarioconstraintrule_string.go  openscenariodatatype_string.go  openscenarioparametertype_string.go  xosc.go  xosc_parser.go
backend/pkg/xosc/schemas/: BUILD
backend/pkg/xosc/schemas/openscenario/: BUILD  openscenario_schema.go
backend/sampler/: go.mod
backend/sampler/cmd/sampler/: BUILD.bazel  main.go
backend/sampler/pkg/xosc/: BUILD.bazel  parser.go
backend/sampler/pkg/xosc/tests/: BUILD.bazel  parser_test.go
backend/sampler/pkg/xosc/tests/testdata/: valid_scenario.xosc
backend/sampler/proto/: BUILD.bazel
backend/sampler/scripts/: generate_schema.sh
backend/scripts/: gererate_xosc_schema.sh
backend/test/pkg/xosc/: BUILD.bazel  parser_test.go  xosc_test.go
backend/test/pkg/xosc/testdata/: dummy_with_parameters.xosc
backend/test/xosc/: BUILD.bazel  xosc_test.go
scripts/: install_dependencies.sh
