load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "api_server_lib",
    srcs = ["main.go"],
    importpath = "github.com/gerzin/xoscs/backend/backend/cmd/api_server",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "api_server",
    embed = [":api_server_lib"],
    visibility = ["//visibility:public"],
)
