load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "xosc",
    srcs = [
        "openscenarioconstraintrule_string.go",
        "openscenariodatatype_string.go",
        "xosc.go",
        "xosc_parser.go",
    ],
    importpath = "github.com/gerzin/xoscs/backend/backend/pkg/xosc",
    visibility = ["//visibility:public"],
)
