load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "parameter_proto",
    srcs = ["parameter.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "parameter_go_proto",
    importpath = "github.com/gerzin/xoscs/backend/sampler/proto",
    proto = ":parameter_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":parameter_go_proto"],
    importpath = "github.com/gerzin/xoscs/backend/sampler/proto",
    visibility = ["//visibility:public"],
)
