load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "catalog_lib",
    srcs = [
        "config.go",
        "main.go",
    ],
    importpath = "github.com/gerzin/xoscs/backend/catalog/cmd/catalog",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "catalog",
    embed = [":catalog_lib"],
    visibility = ["//visibility:public"],
)
